<resources>
    <string name="app_name">Sweetchat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_of_the_app">logo_of_the_app</string>
    <string name="enter_email">Nhập Email</string>
    <string name="enter_your_password">Nhập mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="confirm_your_password">Nhập lại mật khẩu</string>
    <string name="sign_up">Đăng ký</string>

    <string name="about_us">About Us</string>
    <string name="enter_your_name">Nhập tên</string>
    <string name="enter_your_status">Nhập dòng trạng thái của ban</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="name_of_the_user">Name of The User</string>
    <string name="email_of_the_user">Email of The User</string>
    <string name="status_of_the_user">Status of The User</string>
    <string name="seding_the_message">Seding The Message</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="reciever_message">Reciever Message</string>
    <string name="sender_message">Sender Message</string>

    <string name="search">Search</string>
    <string name="add_friend">Thêm bạn</string>
    <string name="check_contacts">Check Contacts</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="sending_the_message">Sending the message</string>
</resources>